[package]
name = "tw-upload"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
inquire = { version = "0.7.5", features = ["date"]}
directories = "5.0"
dirs = "5.0"
regex = "1.11.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
